src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * Description : This operation modifies and disposes a data instance with<br>
	 *               a specific timestamp.<br>
	 * This operation performs the same functions as dds_writedispose except that<br>
	 * the application provides the value for the source_timestamp that is made<br>
	 * available to connected reader objects. This timestamp is important for the<br>
	 * interpretation of the destination_order QoS policy.<br>
	 * @param[in]  writer    The writer to dispose the data instance from.<br>
	 * @param[in]  data      The data to be written and disposed.<br>
	 * @param[in]  timestamp The timestamp used as source timestamp.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_TIMEOUT<br>
	 *                Either the current action overflowed the available resources<br>
	 *                as specified by the combination of the reliability QoS policy,<br>
	 *                history QoS policy and resource_limits QoS policy, or the<br>
	 *                current action was waiting for data delivery acknowledgement<br>
	 *                by synchronous readers. This caused blocking of this operation,<br>
	 *                which could not be resolved before max_blocking_time of the<br>
	 *                reliability QoS policy elapsed.<br>
	 * Original signature : <code>dds_return_t dds_writedispose_ts(dds_entity_t, const void*, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:873</i>
	 */
	public static native DdscLibrary.dds_return_t dds_writedispose_ts(DdscLibrary.dds_entity_t writer, Pointer data, DdscLibrary.dds_time_t timestamp);
	/**
	 * @brief This operation disposes an instance, identified by the data sample.<br>
	 * This operation requests the Data Distribution Service to modify the instance and<br>
	 * mark it for deletion. Copies of the instance and its corresponding samples, which are<br>
	 * stored in every connected reader and, dependent on the QoS policy settings (also in<br>
	 * the Transient and Persistent stores) will be modified and marked for deletion by<br>
	 * setting their dds_instance_state_t to DDS_IST_NOT_ALIVE_DISPOSED.<br>
	 * <b><i>Blocking</i></b><br>
	 * If the history QoS policy is set to DDS_HISTORY_KEEP_ALL, the<br>
	 * dds_writedispose operation on the writer may block if the modification<br>
	 * would cause data to be lost because one of the limits, specified in the<br>
	 * resource_limits QoS policy, to be exceeded. In case the synchronous<br>
	 * attribute value of the reliability Qos policy is set to true for<br>
	 * communicating writers and readers then the writer will wait until<br>
	 * all synchronous readers have acknowledged the data. Under these<br>
	 * circumstances, the max_blocking_time attribute of the reliability<br>
	 * QoS policy configures the maximum time the dds_writedispose operation<br>
	 * may block.<br>
	 * If max_blocking_time elapses before the writer is able to store the<br>
	 * modification without exceeding the limits and all expected acknowledgements<br>
	 * are received, the dds_writedispose operation will fail and returns<br>
	 * DDS_RETCODE_TIMEOUT.<br>
	 * @param[in]  writer The writer to dispose the data instance from.<br>
	 * @param[in]  data   The data sample that identifies the instance<br>
	 *                    to be disposed.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_TIMEOUT<br>
	 *                Either the current action overflowed the available resources<br>
	 *                as specified by the combination of the reliability QoS policy,<br>
	 *                history QoS policy and resource_limits QoS policy, or the<br>
	 *                current action was waiting for data delivery acknowledgement<br>
	 *                by synchronous readers. This caused blocking of this operation,<br>
	 *                which could not be resolved before max_blocking_time of the<br>
	 *                reliability QoS policy elapsed.<br>
	 * Original signature : <code>dds_return_t dds_dispose(dds_entity_t, const void*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:921</i>
	 */
	public static native DdscLibrary.dds_return_t dds_dispose(DdscLibrary.dds_entity_t writer, Pointer data);
	/**
	 * Description : This operation disposes an instance with a specific timestamp,<br>
	 *               identified by the data sample.<br>
	 * This operation performs the same functions as dds_dispose except that<br>
	 * the application provides the value for the source_timestamp that is made<br>
	 * available to connected reader objects. This timestamp is important for the<br>
	 * interpretation of the destination_order QoS policy.<br>
	 * @param[in]  writer    The writer to dispose the data instance from.<br>
	 * @param[in]  data      The data sample that identifies the instance<br>
	 *                       to be disposed.<br>
	 * @param[in]  timestamp The timestamp used as source timestamp.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_TIMEOUT<br>
	 *                Either the current action overflowed the available resources<br>
	 *                as specified by the combination of the reliability QoS policy,<br>
	 *                history QoS policy and resource_limits QoS policy, or the<br>
	 *                current action was waiting for data delivery acknowledgement<br>
	 *                by synchronous readers. This caused blocking of this operation,<br>
	 *                which could not be resolved before max_blocking_time of the<br>
	 *                reliability QoS policy elapsed.<br>
	 * Original signature : <code>dds_return_t dds_dispose_ts(dds_entity_t, const void*, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:955</i>
	 */
	public static native DdscLibrary.dds_return_t dds_dispose_ts(DdscLibrary.dds_entity_t writer, Pointer data, DdscLibrary.dds_time_t timestamp);
	/**
	 * @brief This operation disposes an instance, identified by the instance handle.<br>
	 * This operation requests the Data Distribution Service to modify the instance and<br>
	 * mark it for deletion. Copies of the instance and its corresponding samples, which are<br>
	 * stored in every connected reader and, dependent on the QoS policy settings (also in<br>
	 * the Transient and Persistent stores) will be modified and marked for deletion by<br>
	 * setting their dds_instance_state_t to DDS_IST_NOT_ALIVE_DISPOSED.<br>
	 * <b><i>Instance Handle</i></b><br>
	 * The given instance handle must correspond to the value that was returned by either<br>
	 * the dds_register_instance operation, dds_register_instance_ts or dds_instance_lookup.<br>
	 * If there is no correspondence, then the result of the operation is unspecified.<br>
	 * @param[in]  writer The writer to dispose the data instance from.<br>
	 * @param[in]  handle The handle to identify an instance.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                The instance handle has not been registered with this writer.<br>
	 * Original signature : <code>dds_return_t dds_dispose_ih(dds_entity_t, dds_instance_handle_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:985</i>
	 */
	public static native DdscLibrary.dds_return_t dds_dispose_ih(DdscLibrary.dds_entity_t writer, long handle);
	/**
	 * Description : This operation disposes an instance with a specific timestamp,<br>
	 *               identified by the instance handle.<br>
	 * This operation performs the same functions as dds_dispose_ih except that<br>
	 * the application provides the value for the source_timestamp that is made<br>
	 * available to connected reader objects. This timestamp is important for the<br>
	 * interpretation of the destination_order QoS policy.<br>
	 * @param[in]  writer    The writer to dispose the data instance from.<br>
	 * @param[in]  handle    The handle to identify an instance.<br>
	 * @param[in]  timestamp The timestamp used as source timestamp.<br>
	 * @returns  0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                The sample is written and the instance is marked for deletion.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                At least one of the arguments is invalid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                The instance handle has not been registered with this writer.<br>
	 * Original signature : <code>dds_return_t dds_dispose_ih_ts(dds_entity_t, dds_instance_handle_t, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1012</i>
	 */
	public static native DdscLibrary.dds_return_t dds_dispose_ih_ts(DdscLibrary.dds_entity_t writer, long handle, DdscLibrary.dds_time_t timestamp);
